--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 		</div>
 
 	</body>
-    
+
+	<script src="js/jQuerySource.js"></script>
+	<script src="js/jQuery.js"></script>
 	<script type="text/javascript" src="js/Phrase.js"></script>
 	<script type="text/javascript" src="js/Game.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
